Fixed minor css align and padding issues in header.

--- a/src/scss/calendar-web-widget.scss
+++ b/src/scss/calendar-web-widget.scss
@@ -57,12 +57,13 @@
       padding-left: 10px;
 
       &.calendar-next{
-        padding-right: 16px;
+        padding-right: 8px;
         text-align: right;
         padding-left:0;
       }
       &.calendar-prev{
         padding-left: 8px;
+        text-align:left;
       }
     }
   }
